# Defcon29-mute-button

./: .gitignore  2-30am dallan_prompt.md  BUILD_MACOS.md  BUILD_NOTES.md  CLAUDE.md  LED_TAKEOVER_DESIGN.md  SESSION_CONTEXT.md  VALIDATION_NOTES.md  WINDOWS_BUILD_HANDOFF.md  build_errors.txt  pyproject.toml
.claude/commands/: flash-badge.md  regen-docs.md
.github/workflows/: pages.yml
Firmware/Compiled/: DC29.hex  DC29.uf2
dc29/: __init__.py  audio.py  awake.py  badge.py  cli.py  config.py  protocol.py  scenes.py  scenes_reactive.py  spotify.py  stats.py  throttle.py  totp_test.py
dc29/bridges/: __init__.py  audio_reactive.py  base.py  beat_buzzer.py  beat_strobe.py  colors.py  focus.py  generic.py  manager.py  manifest.py  outlook.py  registry.py  slack.py  stay_awake.py  teams.py
dc29/tui/: __init__.py  app.py  stay_awake_tab.py
docs/: ARCHITECTURE.md  BUG_ANALYSIS_ISSUE5.md  CODE_GUIDE.md  CODE_REVIEW.md  PORTING_WLED_DEEP_DIVE.md  WLED_PORTING_GUIDE.md
docs/developer/: README.md  api-reference.md  building-bridges.md  cli-extensions.md  examples.md
docs/hacker/: README.md  adding-effects.md  firmware-build.md  flashing.md  hardware-ref.md  protocol.md
docs/hardware-features/: DESIGN.md  README.md  REVIEW.md  SHIPPED.md
docs/spine/: 00-overview.md  01-protocol.md  02-architecture.md  03-firmware.md  04-hardware.md  05-getting-started.md  06-extending.md
docs/user/: README.md  faq.md  (+3 more)
tools/: TEAMS_MUTE_SETUP.md  teams_mute_indicator.py  test_beep_patterns.py  test_haptic_click.py  test_hid_burst.py  test_input_modifiers.py  test_stay_awake.py
(+54 files in other folders)
