[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dc29-badge"
version = "1.0.0"
description = "CLI and TUI tools for the DEF CON 29 badge macro-keypad"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "websockets>=12.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
tui    = ["textual>=0.60"]
hotkey = ["pynput>=1.7"]
config = ["tomli>=2.0; python_version < '3.11'"]
all    = ["dc29-badge[tui,hotkey,config]"]

[project.scripts]
dc29 = "dc29.cli:app"
